methods.basics.Methods.scala.error
Erreur de compilation :
Methods:2: error: not found: value l
  l = 0
  ^Methods:5: error: not found: value l
    l = l + 1
    ^Methods:8: error: not found: value l
  for (i <- 1 to l) {
                 ^