methods.basics.Methods.scala.code
def goAndGet() {
  l = 0
  while (estSurBiscuit() == false) {
    avance()
    l = l + 1
  }
  prendBiscuit()
  for (i <- 1 to l) {
    recule()
  }
  poseBiscuit()
}

for (i <- 1 to 7) {
    goAndGet();
    right();
    forward();
    left();
}